--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,127 +10,130 @@
     />
     <style>
       * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", "sans-serif";
-}
-body {
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background: url("https://i.pinimg.com/736x/53/f9/f8/53f9f869832a13496f3491dd7c89b3f9.jpg") no-repeat center;
-  background-size: cover;
-  background-attachment: fixed;
-  
-}
-.wrapper {
-  width: 420px;
-  background: purple;
-  color: #fff;
-  border-radius: 10px;
-  padding: 30px 40px;
-}
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Poppins", "sans-serif";
+      }
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        background: url("https://i.pinimg.com/736x/53/f9/f8/53f9f869832a13496f3491dd7c89b3f9.jpg")
+          no-repeat center;
+        background-size: cover;
+        background-attachment: fixed;
+      }
+      .wrapper {
+        width: 420px;
+        background: purple;
+        color: #fff;
+        border-radius: 10px;
+        padding: 30px 40px;
+      }
 
-.wrapper h1 {
-  font-size: 36px;
-  text-align: center;
-}
+      .wrapper h1 {
+        font-size: 36px;
+        text-align: center;
+      }
 
-.wrapper .input-box {
-  position: relative;
-  width: 100%;
-  height: 50px;
-  margin: 30px 0;
-}
+      .wrapper .input-box {
+        position: relative;
+        width: 100%;
+        height: 50px;
+        margin: 30px 0;
+      }
 
-.input-box input {
-  width: 100%;
-  height: 100%;
-  background: transparent;
-  border: none;
-  outline: none;
-  border: 2px solid rgba(255, 255, 255, 0.2);
-  border-radius: 40px;
-  font-size: 20px;
-  color: #fff;
-  padding: 20px 45px 20px 20px;
-}
+      .input-box input {
+        width: 100%;
+        height: 100%;
+        background: transparent;
+        border: none;
+        outline: none;
+        border: 2px solid rgba(255, 255, 255, 0.2);
+        border-radius: 40px;
+        font-size: 20px;
+        color: #fff;
+        padding: 20px 45px 20px 20px;
+      }
 
-.input-box input::placeholder {
-  color: #fff;
-}
-.input-box i {
-  position: absolute;
-  right: 20px;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 20px;
-}
+      .input-box input::placeholder {
+        color: #fff;
+      }
+      .input-box i {
+        position: absolute;
+        right: 20px;
+        top: 50%;
+        transform: translateY(-50%);
+        font-size: 20px;
+      }
 
-.wrapper .remember-forget {
-  display: flex;
-  justify-content: space-between;
-  font-size: 14.5px;
-  margin: -15px 0 15px;
-}
+      .wrapper .remember-forget {
+        display: flex;
+        justify-content: space-between;
+        font-size: 14.5px;
+        margin: -15px 0 15px;
+      }
 
-.remember-forget label input {
-  accent-color: #fff;
-  margin-right: 3px;
-}
+      .remember-forget label input {
+        accent-color: #fff;
+        margin-right: 3px;
+      }
 
-.remember-forget a {
-  color: #fff;
-  text-decoration: none;
-}
+      .remember-forget a {
+        color: #fff;
+        text-decoration: none;
+      }
 
-.remember-forget a:hover {
-  text-decoration: underline;
-}
+      .remember-forget a:hover {
+        text-decoration: underline;
+      }
 
-.wrapper .btn {
-  width: 100%;
-  height: 45px;
-  background: #fff;
-  border: none;
-  outline: none;
-  border-radius: 40px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-  font-size: 16px;
-  color: #333;
-  font-weight: 600;
-}
+      .wrapper .btn {
+        width: 100%;
+        height: 45px;
+        background: #fff;
+        border: none;
+        outline: none;
+        border-radius: 40px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        cursor: pointer;
+        font-size: 16px;
+        color: #333;
+        font-weight: 600;
+      }
 
-.wrapper .register-link {
-  font-size: 14.5px;
-  text-align: center;
-  margin: 20px 0 15px;
-}
+      .wrapper .register-link {
+        font-size: 14.5px;
+        text-align: center;
+        margin: 20px 0 15px;
+      }
 
-.register-link p a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: 800;
-}
+      .register-link p a {
+        color: #fff;
+        text-decoration: none;
+        font-weight: 800;
+      }
 
-.register-link p a:hover {
-  text-decoration: underline;
-}
-
+      .register-link p a:hover {
+        text-decoration: underline;
+      }
     </style>
   </head>
   <body>
     <div class="wrapper">
-      <form action="" method="post">
+      <form
+        action="http://localhost:3000/api/auth/login"
+        method="POST"
+        id="form"
+      >
         <h1>Login</h1>
         <div class="input-box">
           <input
             type="text"
-            name=""
             id="username"
+            name="username"
             placeholder="username"
             required
           />
@@ -139,7 +142,7 @@ body {
         <div class="input-box">
           <input
             type="password"
-            name=""
+            name="password"
             id="password"
             placeholder="password"
             required
@@ -150,11 +153,33 @@ body {
           <label><input type="checkbox" />Remember me</label>
           <label><a href="#">Forget password?</a></label>
         </div>
-        <button type="submit" class="btn">Login</button>
+        <button type="submit" class="btn" id="submit-btn">Login</button>
         <div class="register-link">
           <p>Don't have any account <a href="#">Register</a></p>
         </div>
       </form>
     </div>
+    <!-- <script>
+      const form = document.getElementById("form");
+      const submit = document.getElementById("submit-btn");
+      const userIn = document.getElementById("username");
+      const passIn = document.getElementById("password");
+
+      const responseAPI = async (e) => {
+        e.preventDefault();
+        const res = await fetch("http://localhost:3000/api/auth/login", {
+          method: "POST",
+          headers: {
+            "Content-Type": "html/text",
+          },
+          body: JSON.stringify({
+            username: userIn.value,
+            password: passIn.value,
+          }),
+        });
+      };
+
+      submit.addEventListener("onclick", responseAPI);
+    </script> -->
   </body>
 </html>
